--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <div>
         <form>
-            <label>Weight</label>
+            <label>Weight (in Lbs)</label>
             <br>
             <input type="number" id="weight">
             <br>
@@ -18,7 +20,7 @@
             <br>
             <br>
             <input type="submit" name="" value="Calculate" id="calculate">
-            
+
 
 
 
@@ -26,6 +28,7 @@
 
 
     </div>
-    <script src="OneRepMax.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
